--- a/Sesion1/Ejemplo1.ipynb
+++ b/Sesion1/Ejemplo1.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Ejemplo 1: Conceptos básicos de análisis de datos espaciales en Python\n",
-    "\n"
+    "\n",
+    "Hola colegas, bienvenidXs al curso.\n"
    ]
   },
   {
